--- a/iOS/ICT13580068A.iOS.csproj
+++ b/iOS/ICT13580068A.iOS.csproj
@@ -137,6 +137,7 @@
     <BundleResource Include="Resources\anchor%403x.png" />
     <BundleResource Include="Resources\approximately%403x.png" />
     <BundleResource Include="Resources\menu.png" />
+    <BundleResource Include="Resources\menu %281%29.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
